@@ -1,6 +1,8 @@
 package pack.dto;
 
 import java.time.LocalDateTime;
+import java.util.List;
+import java.util.stream.Collectors;
 
 import jakarta.persistence.Id;
 import lombok.AllArgsConstructor;
@@ -17,7 +19,6 @@ import pack.entity.ReviewEntity;
 @AllArgsConstructor
 @Builder
 public class ReviewDto {
-	@Id
     private Integer no;
 
     private String id;
@@ -33,9 +34,9 @@ public class ReviewDto {
     private int placeNo; 
     private float point;
 
-    //private List<LikesReviewDto> likes; // 좋아요 정보 추가
+    private List<LikesReviewDto> likes; // 좋아요 정보 추가
 
-    //private List<ReportDto> reports;
+    private List<ReportReviewDto> reports; // 신고 정보 추가
 	
 	//toEntity: dto > entity
     public static ReviewEntity toReviewEntity(ReviewDto dto) {
@@ -53,14 +54,14 @@ public class ReviewDto {
     			.ip(dto.getIp())
     			.placeNo(dto.getPlaceNo())
     			.point(dto.getPoint())
-//    			.likes(dto.getLikes() != null ? 
-//    				dto.getLikes().stream()
-//    					.map(LikesReviewDto::toLikesReviewEntity)
-//    					.collect(Collectors.toList()) : Collections.emptyList())
-    			//.reports(dto.getReports() != null ?
-    			//	dto.getReports().stream()
-    			//		.map(ReportDto::toReportEntity)
-    				//	.collect(Collectors.toList()) : Collections.emptyList())
+				.likes(dto.getLikes() != null ?
+						dto.getLikes().stream()
+								.map(LikesReviewDto::toEntity)  // LikesReviewDto를 LikesEntity로 변환
+								.collect(Collectors.toList()) : List.of())  // 좋아요 DTO 리스트를 Entity 리스트로 변환
+    			.reports(dto.getReports() != null ?
+    				dto.getReports().stream()
+    					.map(ReportReviewDto::toEntity)
+    					.collect(Collectors.toList()) : List.of())
     			.build();
     }
 }
